--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ head {
 
 body{
     background-image: url(Background.jpg);
+    height: 25px;
     background-color: #cccccc;
     text-align: center;
 }
