--- a/style.css
+++ b/style.css
@@ -1,13 +1,69 @@
-head {
+body {
+    background-color: #f8f1f1;
+    font-family: 'Arial', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
+.container{
+    background-color: #fff;
+    border: 2px solid #f0dcdc;
+    border-radius: 15px;
+    padding: 20px;
+    width: 300px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
 
-body{
-    background-image: url(Background.jpg);
-    height: 2px;
-    background-color: #cccccc;
-    text-align: center;
+.header {
+    font-size: 24px;
+    color: #c99;
 }
-div {
-    text-align: center;
+
+.profile-picture {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 2px solid #f0dcdc;
+    margin-bottom: 20px;
+}
+
+.info p, .favorites ul {
+margin: 10px 0;
+color: #555;
+}
+
+.favorites h2 {
+    margin-bottom: 10px;
+    color: #c99;
+
+}
+
+.favorites ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.favorites ul li {
+    background-color: #f9e2e2;
+    padding: 5px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+}
+
+.footer {
+    margin-top: 20px;
+}
+
+.footer p {
+    color: #c99;
+}
+
+.footer img {
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
 }
